--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                   <heading>News</heading>
                   <p>
                       <li>
-                        [2024.9] One paper gets accepted to CoRL 2024.
-                      </li>
+                        [2024.9] <a href="https://gs-dynamics.github.io/">GS-Dynamics</a> gets accepted to CoRL 2024.
                       <li>
                         [2024.8] After a wonderful year at UIUC, I will be joining Columbia University to continue my PhD.
                       </li>
@@ -105,6 +104,46 @@
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
                   <video autoplay muted loop playsinline width="300px">
+                    <source src="vids/main/pgnd.mp4" type="video/mp4">
+                  </video>
+                </td>
+                <td style="padding:20px;width:70%;vertical-align:middle">
+                  <a href="https://kywind.github.io/">
+                    <papertitle>
+                      Particle-Grid Neural Dynamics for Learning Deformable Object Models from Depth Images
+                    </papertitle>
+                  </a>
+                  <br>
+                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a></strong>,
+                  <a href="https://boey-li.github.io/baoyuli.github.io/">Baoyu Li</a>, 
+                  <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a>, 
+                  <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
+                  <br>
+                  In submission
+                  <!-- <br> -->
+                  <!-- ICRA RMDO Workshop, 2024 <strong><font color='#b70000'>(Best Abstract Award, Top 1)</strong></font> -->
+                  <!-- <br> -->
+                  <!-- <a href="https://robopil.github.io/adaptigraph/">website</a> -->
+                  <!-- / -->
+                  <!-- <a href="https://arxiv.org/abs/2407.07889">arXiv</a> -->
+                  <!-- / -->
+                  <!-- <a href="https://arxiv.org/pdf/2407.07889.pdf">pdf</a> -->
+                  <!-- / -->
+                  <!-- <a href="https://github.com/Boey-li/AdaptiGraph">code</a> -->
+                  <p>
+                    We learn particle-based object dynamics model from real-world sparse-view RGB-D recording, enabling 
+                    higher-quality action-conditioned object motion prediction and GS-based rendering.
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:30%;vertical-align:middle">
+                  <video autoplay muted loop playsinline width="300px">
                     <source src="vids/main/gaussian-gbnd.mp4" type="video/mp4">
                   </video>
                 </td>
@@ -130,6 +169,10 @@
                   <a href="https://github.com/robo-alex/gs-dynamics">code</a>
                   /
                   <a href="https://huggingface.co/spaces/kaifz/gs-dynamics">demo</a>
+                  <p>
+                  We learn neural dynamics models of objects from real perception data 
+                  and combine the learned model with 3D Gaussian Splatting for action-conditioned predictive rendering.
+                  </p>
                 </td>
               </tr>
             </tbody>
@@ -151,7 +194,7 @@
                   </a>
                   <br>
                   <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a>*</strong>,
-                  <a href="https://scholar.google.com/citations?user=pFeywbYAAAAJ&hl=en">Baoyu Li</a>*, 
+                  <a href="https://boey-li.github.io/baoyuli.github.io/">Baoyu Li</a>*, 
                   <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a>, 
                   <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
                   <br>
@@ -166,6 +209,10 @@
                   <a href="https://arxiv.org/pdf/2407.07889.pdf">pdf</a>
                   /
                   <a href="https://github.com/Boey-li/AdaptiGraph">code</a>
+                  <p>
+                    We learn a material-conditioned neural dynamics model using graph neural network to 
+                    enable predictive modeling of diverse real-world objects and achieve efficient manipulation via model-based planning.
+                  </p>
                 </td>
               </tr>
             </tbody>
@@ -197,6 +244,10 @@
                   <a href="https://arxiv.org/abs/2406.10167">arXiv</a>
                   /
                   <a href="https://arxiv.org/pdf/2406.10167.pdf">pdf</a>
+                  <p>
+                    We achieve 4D neural implicit reconstruction from only a single-view scan 
+                    using deformation and topology regularizations.
+                  </p>
                 </td>
               </tr>
             </tbody>
@@ -233,11 +284,11 @@
                   <a href="https://arxiv.org/pdf/2210.07199.pdf">pdf</a>
                   /
                   <a href="https://github.com/kywind/self-corr-pose">code</a>
-                  <!-- <p>
-                    We propose a self-supervised method for category-level 6D object pose estimation 
-                    by learning dense 2D-3D geometric correspondences. Our method can train on in-the-wild RGB/RGBD image collections
+                  <p>
+                    We propose a fully self-supervised method for category-level 6D object pose estimation 
+                    by learning dense 2D-3D geometric correspondences. Our method can train on image collections
                     without any 3D annotations. 
-                  </p> -->
+                  </p>
                 </td>
               </tr>
             </tbody>
@@ -268,6 +319,10 @@
                   <a href="https://arxiv.org/pdf/2207.10456.pdf">pdf</a>
                   /
                   <a href="https://github.com/Yingdong-Hu/SFC">code</a>
+                  <p>
+                    We show that fusing fine-grained features learned with low-level contrastive objectives and semantic features 
+                    from image-level objectives can improve SSL pretraining.
+                  </p>
                   <!-- <p>
                     We show that fine-grained features learned with low-level contrastive objectives are 
                     complementary to semantic features from image-level SSL methods. Fusing these features can significantly improve the performance for downstream tasks.
