--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
                     <b style="color:rgb(183, 0, 0)">Seeking for a research intern position summer 2025. Please let me know if you would like to chat! </b>
                   </p>
                   <p style="text-align:center">
+                    <a href="mailto:kaifeng.z@columbia.edu">Email</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
                     <a href="https://twitter.com/kaiwynd">Twitter</a> &nbsp/&nbsp
-                    <a href="https://www.linkedin.com/in/kaifeng-zhang-7b971625b/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/kaifeng-zhang-7b971625b/">LinkedIn</a> &nbsp/&nbsp
+                    <a href="https://kywind.github.io/pdf/resume.pdf">CV</a>
                   </p>
                 </td>
                 <td style="padding:0%;width:25%;max-width:25%">
@@ -116,8 +118,8 @@
                   <br>
                   In submission
                   <p>
-                    We learn particle-based object dynamics model from real-world sparse-view RGB-D recording, enabling 
-                    higher-quality action-conditioned object motion prediction and GS-based rendering.
+                    We learn particle-based object dynamics model from real-world sparse-view RGB-D recordings, enabling 
+                    high-quality action-conditioned object motion prediction and GS-based rendering.
                   </p>
                 </td>
               </tr>
@@ -317,7 +319,7 @@
             </tbody>
           </table>
 
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
@@ -328,7 +330,7 @@
                 </td>
               </tr>
             </tbody>
-          </table>
+          </table> -->
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
