--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
                   </p>
                   <p>
                     I am a second-year Ph.D. student in computer science at <a href="https://columbia.edu/">Columbia University</a>, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>. 
+                  </p>
+                  <p>
                     I obtained my Bachelors degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>, where I worked with <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a> 
                     and <a href="https://ericyi.github.io/">Prof. Li Yi</a>. I also interned at <a href="https://ucsd.edu/">UC San Diego</a>, collaborating with <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a>.
                     Prior to joining Columbia, I completed a year of graduate study at <a href="https://illinois.edu/">UIUC</a>, where I was fortunate to collaborate with <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a>.
                   </p>
                   <p>
-                    My research is at the intersection of robotics, computer vision and machine learning. 
-                    I am interested in developing robotic systems that perceive and understand the 3D physical world. 
+                    I am interested in robotics, computer vision, physics-based simulation, and machine learning. 
                   </p>
-                  <p> 
+                  <!-- <p> 
                     <b style="color:rgb(183, 0, 0)">Seeking for a research intern position summer 2025. Please let me know if you would like to chat! </b>
-                  </p>
+                  </p> -->
                   <p style="text-align:center">
                     <a href="mailto:kaifeng.z@columbia.edu">Email</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
