--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
                   </p>
                   <p>
                     I am a second-year Ph.D. student in computer science at <a href="https://columbia.edu/">Columbia University</a>, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>. 
-                  </p>
-                  <p>
-                    I obtained my Bachelors degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>, where I worked with <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a> 
-                    and <a href="https://ericyi.github.io/">Prof. Li Yi</a>. I also interned at <a href="https://ucsd.edu/">UC San Diego</a>, collaborating with <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a>.
-                    Prior to joining Columbia, I completed a year of graduate study at <a href="https://illinois.edu/">UIUC</a>, where I was fortunate to collaborate with <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a>.
+                    Prior to this, I obtained my Bachelors degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>. 
+                    I am fortunate to receive mentorship from <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a> during my Ph.D. study.
                   </p>
                   <p>
                     I am interested in robotics, computer vision, physics-based simulation, and machine learning. 
@@ -77,7 +74,7 @@
                       <li>
                         [2023.8] Starting my PhD at UIUC, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>.
                       </li>
-                      <li>
+                      <!-- <li>
                         [2023.6] Graduated from Tsinghua University.
                       </li>
                       <li>
@@ -85,7 +82,7 @@
                       </li>
                       <li>
                         [2022.7] One paper gets accepted to ECCV 2022.
-                      </li>
+                      </li> -->
                   </p>
                 </td>
               </tr>
@@ -188,7 +185,7 @@
                   <br>
                   Robotics: Science and Systems (RSS), 2024
                   <br>
-                  ICRA RMDO Workshop, 2024 <strong><font color='#b70000'>(Best Abstract Award, Top 1)</strong></font>
+                  ICRA RMDO Workshop, 2024 <strong><font color='#b70000'>(Best Abstract Award)</strong></font>
                   <br>
                   <a href="https://robopil.github.io/adaptigraph/">website</a>
                   /
@@ -320,18 +317,19 @@
             </tbody>
           </table>
 
-          <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>Contact</heading>
                   <p>
-                    If you are interested in my work and would like to discuss anything, feel free to email me at: kaifeng [dot] z [at] columbia [dot] edu
+                    If you are interested in my work and would like to discuss research opportunity, collaboration, Ph.D. application, or anything else, feel free to contact me via email: 
+                    kaifeng dot z at columbia dot edu.
                   </p>
                 </td>
               </tr>
             </tbody>
-          </table> -->
+          </table>
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
