--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
                   <p>
                     I am a second-year Ph.D. student in computer science at <a href="https://columbia.edu/">Columbia University</a>, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>. 
                     Prior to this, I obtained my Bachelors degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>. 
-                    I am fortunate to receive mentorship from <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a> during my Ph.D. study.
+                    I am fortunate to receive mentorship from <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a> during my Ph.D. study, and <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a>, 
+                    <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a>, <a href="https://ericyi.github.io/">Prof. Li Yi</a> during my undergrad.
                   </p>
                   <p>
-                    I am interested in robotics, computer vision, physics-based simulation, and machine learning. 
+                    I am interested in robotics, 3D vision, physics-based simulation, and machine learning. 
                   </p>
                   <!-- <p> 
                     <b style="color:rgb(183, 0, 0)">Seeking for a research intern position summer 2025. Please let me know if you would like to chat! </b>
