--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a>, <a href="https://ericyi.github.io/">Prof. Li Yi</a> during my undergrad.
                   </p>
                   <p>
-                    I am interested in robotics, 3D vision, physics-based simulation, and machine learning. 
+                    I am interested in robotics, 3D vision, physics simulation, and machine learning. 
                   </p>
                   <!-- <p> 
                     <b style="color:rgb(183, 0, 0)">Seeking for a research intern position summer 2025. Please let me know if you would like to chat! </b>
