--- a/index.html
+++ b/index.html
@@ -105,6 +105,46 @@
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
                   <video autoplay muted loop playsinline width="300px">
+                    <source src="vids/main/phystwin.mp4" type="video/mp4">
+                  </video>
+                </td>
+                <td style="padding:20px;width:70%;vertical-align:middle">
+                  <a href="https://jianghanxiao.github.io/phystwin-web/">
+                    <papertitle>
+                      PhysTwin: Physics-Informed Reconstruction and Simulation of Deformable Objects from Videos
+                    </papertitle>
+                  </a>
+                  <br>
+                  <a href="https://jianghanxiao.github.io/">Hanxiao Jiang</a>, 
+                  <a href="https://haoyuhsu.github.io/">Hao-Yu Hsu</a>, 
+                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a></strong>,
+                  <a href="https://www.linkedin.com/in/hnyu/">Hsin-Ni Yu</a>, 
+                  <a href="https://shenlong.web.illinois.edu/">Shenlong Wang</a>, 
+                  <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
+                  <br>
+                  ArXiv, 2025
+                  <br>
+                  <a href="https://jianghanxiao.github.io/phystwin-web/">website</a>
+                  /
+                  <a href="https://arxiv.org/abs/2503.17973">arXiv</a>
+                  /
+                  <a href="https://arxiv.org/abs/2503.17973.pdf">pdf</a>
+                  /
+                  <a href="https://github.com/Jianghanxiao/PhysTwin">code</a>
+                  <p>
+                    We optimize a spring-mass physics model of deformable objects and 
+                    integrate the model with 3D Gaussian Splatting for real-time re-simulation with rendering.
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:30%;vertical-align:middle">
+                  <video autoplay muted loop playsinline width="300px">
                     <source src="vids/main/pgnd.mp4" type="video/mp4">
                   </video>
                 </td>
@@ -118,7 +158,7 @@
                   In submission
                   <p>
                     We learn particle-based object dynamics model from real-world sparse-view RGB-D recordings, enabling 
-                    high-quality action-conditioned object motion prediction and GS-based rendering.
+                    high-quality action-conditioned object motion prediction and rendering.
                   </p>
                 </td>
               </tr>
