--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
                   <p>
                     I am interested in robotics, 3D vision, physics simulation, and machine learning. 
                   </p>
+                  <p>
+                    If you are interested in my work and would like to discuss research opportunity, collaboration, Ph.D. application, or anything else, feel free to contact me via email: 
+                    kaifeng dot z at columbia dot edu.
+                  </p>
                   <!-- <p> 
                     <b style="color:rgb(183, 0, 0)">Seeking for a research intern position summer 2025. Please let me know if you would like to chat! </b>
                   </p> -->
                   <p style="text-align:center">
-                    <a href="mailto:kaifeng.z@columbia.edu">Email</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
                     <a href="https://twitter.com/kaiwynd">Twitter</a> &nbsp/&nbsp
@@ -54,7 +57,7 @@
             </tbody>
           </table>
 
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
@@ -75,7 +78,7 @@
                       <li>
                         [2023.8] Starting my PhD at UIUC, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>.
                       </li>
-                      <!-- <li>
+                      <li>
                         [2023.6] Graduated from Tsinghua University.
                       </li>
                       <li>
@@ -83,12 +86,12 @@
                       </li>
                       <li>
                         [2022.7] One paper gets accepted to ECCV 2022.
-                      </li> -->
+                      </li>
                   </p>
                 </td>
               </tr>
             </tbody>
-          </table>
+          </table> -->
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
@@ -155,10 +158,17 @@
                     </papertitle>
                   </a>
                   <br>
-                  In submission
+                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a></strong>,
+                  <a href="https://boey-li.github.io/">Baoyu Li</a>, 
+                  <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a>, 
+                  <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
+                  <br>
+                  Robotics: Science and Systems (RSS), 2025
+                  <br>
+                  <a href="https://kywind.github.io/">paper and code coming soon</a>
                   <p>
-                    We learn particle-based object dynamics model from real-world sparse-view RGB-D recordings, enabling 
-                    high-quality action-conditioned object motion prediction and rendering.
+                    We propose a neural particle-grid model for training dynamics model with real-world sparse-view RGB-D videos, enabling 
+                    high-quality future prediction and rendering.
                   </p>
                 </td>
               </tr>
@@ -358,7 +368,7 @@
             </tbody>
           </table>
 
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
@@ -370,7 +380,7 @@
                 </td>
               </tr>
             </tbody>
-          </table>
+          </table> -->
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
