--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                   </a>
                   <br>
                   <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a>*</strong>,
-                  <a href="https://boey-li.github.io/baoyuli.github.io/">Baoyu Li</a>*, 
+                  <a href="https://boey-li.github.io/">Baoyu Li</a>*, 
                   <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a>, 
                   <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
                   <br>
