--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
                   <br>
                   Robotics: Science and Systems (RSS), 2025
                   <br>
-                  <a href="https://kywind.github.io/">paper and code coming soon</a>
+                  <a href="https://www.roboticsproceedings.org/rss21/p036.pdf">pdf</a>
+                  /
+                  <a href="https://kywind.github.io/">project page and code coming soon</a>
                   <p>
                     We propose a neural particle-grid model for training dynamics model with real-world sparse-view RGB-D videos, enabling 
                     high-quality future prediction and rendering.
