--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <td style="padding:20px;width:70%;vertical-align:middle">
                   <a href="https://kywind.github.io/">
                     <papertitle>
-                      Particle-Grid Neural Dynamics for Learning Deformable Object Models from Depth Images
+                      Particle-Grid Neural Dynamics for Learning Deformable Object Models from RGB-D Videos
                     </papertitle>
                   </a>
                   <br>
