--- a/pgnd.html
+++ b/pgnd.html
@@ -159,8 +159,10 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-full-width">
           <h2 class="title is-3">Video</h2>
-          <iframe src="https://www.youtube.com/embed/SZThFL6gfXg"
-            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <div class="publication-video">
+            <iframe src="https://www.youtube.com/embed/SZThFL6gfXg"
+              frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
         </div>
       </div>
     </div>
