--- a/pgnd.html
+++ b/pgnd.html
@@ -99,7 +99,7 @@
                   </a>
               </span>
               <span class="link-block">
-                <a href="https://kywind.github.io/pgnd"
+                <a href="https://huggingface.co/spaces/kaifz/pgnd"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     🤗
