pgnd new teaser and demo

--- a/pgnd.html
+++ b/pgnd.html
@@ -95,17 +95,8 @@
                   <span class="icon">
                       <i class="fab fa-twitter"></i>
                   </span>
-                  <span>Thread</span>
+                  <span>X/Twitter</span>
                   </a>
-              </span>
-              <span class="link-block">
-                <a href="https://huggingface.co/spaces/kaifz/pgnd"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    🤗
-                  </span>
-                  <span>Interactive Demo</span>
-                </a>
               </span>
             </div>
           </div>
@@ -124,7 +115,28 @@
       <video autoplay muted loop playsinline height="100%">
         <source src="vids/pgnd/teaser.mp4" type="video/mp4">
       </video>
+    </div>
+    <div class="hero-body">
+      <h2 class="subtitle has-text-centered">
+        Try our Huggingface interactive demo of PGND simulating 3D Gaussians:
+        <br>
+        <span class="link-block">
+          <a href="https://huggingface.co/spaces/kaifz/pgnd"
+            class="external-link button is-normal is-rounded is-dark">
+            <span class="icon">🤗</span>
+            <span>Interactive Demo</span>
+          </a>
+        </span>
+      </h2>
+      <div class="columns is-centered has-text-centered">
       </div>
+      <iframe
+          src="https://kaifz-pgnd.hf.space"
+          frameborder="0"
+          width="850"
+          height="450"
+      ></iframe>
+    </div>
   </div>
 </section>
 
