pgnd demo recording

--- a/pgnd.html
+++ b/pgnd.html
@@ -112,7 +112,7 @@
       <h2 class="subtitle has-text-centered">
         Particle-Grid Neural Dynamics is a learning-based digital twin framework for deformable objects, trained on real RGB-D videos and operable directly on raw observations.
       </h2>
-      <video autoplay muted loop playsinline height="100%">
+      <video autoplay controls muted loop playsinline height="100%">
         <source src="vids/pgnd/teaser.mp4" type="video/mp4">
       </video>
     </div>
@@ -128,14 +128,17 @@
           </a>
         </span>
       </h2>
-      <div class="columns is-centered has-text-centered">
+      <video autoplay controls muted loop playsinline height="100%">
+        <source src="vids/pgnd/demo.mp4" type="video/mp4">
+      </video>
+      <!-- <div class="columns is-centered has-text-centered">
       </div>
       <iframe
           src="https://kaifz-pgnd.hf.space"
           frameborder="0"
           width="850"
           height="450"
-      ></iframe>
+      ></iframe> -->
     </div>
   </div>
 </section>
@@ -173,7 +176,7 @@
           <h2 class="title is-3">Video</h2>
           <div class="publication-video">
             <iframe src="https://www.youtube.com/embed/SZThFL6gfXg"
-              frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              frameborder="0" allow="autoplay controls; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -194,7 +197,7 @@
       </p>
       <div class="columns is-centered has-text-centered">
         <div class="column is-fullwidth">
-          <video autoplay muted loop playsinline>
+          <video autoplay controls muted loop playsinline>
             <source src="vids/pgnd/motivation.mp4" type="video/mp4">
           </video>
         </div>
@@ -209,7 +212,7 @@
     </div>
     <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
-        <video autoplay muted loop playsinline>
+        <video autoplay controls muted loop playsinline>
           <source src="vids/pgnd/method.mp4" type="video/mp4">
         </video> 
       </div>
@@ -245,7 +248,7 @@
     </div>
     <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
-        <video autoplay muted loop playsinline>
+        <video autoplay controls muted loop playsinline>
           <source src="vids/pgnd/particle.mp4" type="video/mp4">
         </video>
       </div>
@@ -263,7 +266,7 @@
     </div>
     <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
-        <video autoplay muted loop playsinline>
+        <video autoplay controls muted loop playsinline>
           <source src="vids/pgnd/gs.mp4" type="video/mp4">
         </video>
       </div>
@@ -281,7 +284,7 @@
     </div>
     <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
-        <video autoplay muted loop playsinline>
+        <video autoplay controls muted loop playsinline>
           <source src="vids/pgnd/hq.mp4" type="video/mp4">
         </video>
       </div>
@@ -300,7 +303,7 @@
     </div>
     <div class="columns is-centered has-text-centered">
       <div class="column is-fullwidth">
-        <video autoplay muted loop playsinline>
+        <video autoplay controls muted loop playsinline>
           <source src="vids/pgnd/planning.mp4" type="video/mp4">
         </video>
       </div>
