--- a/pgnd.html
+++ b/pgnd.html
@@ -90,7 +90,7 @@
                   </a>
               </span>
               <span class="link-block">
-                <a href="https://kywind.github.io/pgnd"
+                <a href="https://x.com/kaiwynd/status/1935791144518271016"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-twitter"></i>
