--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
                     <name>Kaifeng Zhang</name>
                   </p>
                   <p>
-                    I am a second-year Ph.D. student in computer science at <a href="https://columbia.edu/">Columbia University</a>, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>. 
+                    I am a Ph.D. student in computer science at <a href="https://columbia.edu/">Columbia University</a>, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>. 
                     Prior to this, I obtained my Bachelors degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>. 
                     I am fortunate to receive mentorship from <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a> during my Ph.D. study, and <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a>, 
                     <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a>, <a href="https://ericyi.github.io/">Prof. Li Yi</a> during my undergrad.
                   </p>
                   <p>
-                    I am interested in robotics, 3D vision, physics simulation, and machine learning. 
+                    My research sits at the intersection of robotics, 3D vision, physics simulation, and machine learning. 
+                    I am intereseted in combining physics-based modeling and learning to enable robust and generalizable robotic manipulation in challenging domains.
                   </p>
                   <p>
-                    If you are interested in my work and would like to discuss research opportunity, collaboration, Ph.D. application, or anything else, feel free to contact me via email: 
+                    If you would like to discuss research opportunity, collaboration, Ph.D. application, or anything else, feel free to contact me via email: 
                     kaifeng dot z at columbia dot edu.
                   </p>
                   <!-- <p> 
