--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   </p>
                   <p>
                     My research sits at the intersection of robotics, 3D vision, physics simulation, and machine learning. 
-                    I am intereseted in combining physics-based modeling and learning to enable robust and generalizable robotic manipulation in challenging domains.
+                    I am interested in combining physics-based modeling and learning to enable robust and generalizable robotic manipulation in challenging domains.
                   </p>
                   <p>
                     If you would like to discuss research opportunity, collaboration, Ph.D. application, or anything else, feel free to contact me via email: 
