update photo credit

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                 </td>
                 <td style="padding:0%;width:25%;max-width:25%">
                   <img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo" src="images/profile3.jpg" class="hoverZoomLink"></a>
+                  <p style="text-align:center;font-size:14px">
+                    Photo credit: <a href="https://bingjietang718.github.io/" style="font-size:14px">Bingjie Tang</a>
+                  </p>
                 </td>
               </tr>
             </tbody>
