update phystwin acceptance

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                   <a href="https://shenlong.web.illinois.edu/">Shenlong Wang</a>, 
                   <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
                   <br>
-                  ArXiv, 2025
+                  International Conference on Computer Vision (ICCV), 2025
                   <br>
                   <a href="https://jianghanxiao.github.io/phystwin-web/">website</a>
                   /
