--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   </p>
                   <p>
                     My research sits at the intersection of robotics, 3D vision, physics simulation, and machine learning. 
-                    I am interested in combining physics-based modeling and learning to enable robust and generalizable robotic manipulation in challenging domains.
+                    I am interested in bridging the gap between robotic simulation and the real world for robust and scalable robot manipulation.
                   </p>
                   <p>
                     If you would like to discuss research opportunity, collaboration, Ph.D. application, or anything else, feel free to contact me via email: 
@@ -102,6 +102,50 @@
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>Publications</heading>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:30%;vertical-align:middle">
+                  <video autoplay muted loop playsinline width="300px">
+                    <source src="vids/main/real2sim-eval.mp4" type="video/mp4">
+                  </video>
+                </td>
+                <td style="padding:20px;width:70%;vertical-align:middle">
+                  <a href="https://kywind.github.io/">
+                    <papertitle>
+                      Real-to-Sim Robot Policy Evaluation with Gaussian Splatting Simulation of Soft-Body Interactions
+                    </papertitle>
+                  </a>
+                  <br>
+                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a></strong>,
+                  <a href="https://shuosha.github.io/">Shuo Sha</a>,
+                  <a href="https://jianghanxiao.github.io/">Hanxiao Jiang</a>,
+                  <a href="https://scholar.google.com/citations?user=xokChDMAAAAJ&hl=en">Matthew Loper</a>,
+                  <a href="https://sites.google.com/nyu.edu/jay-hyunjong-song">Hyunjong Song</a>,
+                  <a href="https://guangyancai.me/">Guangyan Cai</a>,
+                  <a href="https://drzhuoxu.github.io/">Zhuo Xu</a>,
+                  <a href="https://scholar.google.com/citations?user=-MaXMRAAAAAJ&hl=en">Xiaochen Hu</a>,
+                  <a href="https://www.cs.columbia.edu/~cxz/">Changxi Zheng</a>,
+                  <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
+                  <br>
+                  ArXiv, 2025
+                  <br>
+                  <a href="https://real2sim-eval.github.io/">website</a>
+                  /
+                  <a href="https://arxiv.org/abs/2511.04665">arXiv</a>
+                  /
+                  <a href="https://arxiv.org/abs/2511.04665.pdf">pdf</a>
+                  /
+                  <a href="https://github.com/kywind/real2sim-eval">code</a>
+                  <p>
+                    We propose a framework for robot policy evaluation in simulation environments, 
+                    using Gaussian Splatting for rendering and soft-body digital twin for dynamics.
+                  </p>
                 </td>
               </tr>
             </tbody>
