--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     I am interested in bridging the gap between robotic simulation and the real world for robust and scalable robot manipulation.
                   </p>
                   <p>
-                    If you would like to discuss research opportunity, collaboration, Ph.D. application, or anything else, feel free to contact me via email: 
+                    If you'd like to discuss research opportunity, collaboration, Ph.D. application, or anything related, feel free to reach out via email: 
                     kaifeng dot z at columbia dot edu.
                   </p>
                   <!-- <p> 
@@ -122,8 +122,8 @@
                     </papertitle>
                   </a>
                   <br>
-                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a></strong>,
-                  <a href="https://shuosha.github.io/">Shuo Sha</a>,
+                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a>*</strong>,
+                  <a href="https://shuosha.github.io/">Shuo Sha</a>*,
                   <a href="https://jianghanxiao.github.io/">Hanxiao Jiang</a>,
                   <a href="https://scholar.google.com/citations?user=xokChDMAAAAJ&hl=en">Matthew Loper</a>,
                   <a href="https://sites.google.com/nyu.edu/jay-hyunjong-song">Hyunjong Song</a>,
